infra/k8s/api/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: api
  ports:
    - protocol: TCP
      port: 443
      targetPort: 443
